salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_ClosedLossMessage__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ClosedLossMessage__c</fullName>
    <label>Mensaje de cierre perdido</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>