salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_ClosedStageWon__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ClosedStageWon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Etapa cerrada ganada</label>
    <type>Checkbox</type>
</CustomField>