salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_ClosedWonDate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ClosedWonDate__c</fullName>
    <label>Fecha de Cerrada Ganada</label>
    <type>Date</type>
</CustomField>