salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_ClosedWonMessage__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ClosedWonMessage__c</fullName>
    <defaultValue>&quot;Revisa que sea correcta la oferta sincronizada. Las ofertas asociadas a esta oportunidad se van a cerrar en automático como rechazadas.&quot;</defaultValue>
    <label>Mensaje de Cierre Ganado</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>