salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_Contact__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>