salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_ContractMode__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ContractMode__c</fullName>
    <label>Modalidad Contratación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consultor</fullName>
            </value>
            <value>
                <fullName>Contratación directa</fullName>
            </value>
            <value>
                <fullName>Licitación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>