salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_ContractSignDate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ContractSignDate__c</fullName>
    <label>Fecha de Firma de Contrato</label>
    <type>Date</type>
</CustomField>