salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_ContractSigningDate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ContractSigningDate__c</fullName>
    <label>Fecha de firma del contrato</label>
    <type>Date</type>
</CustomField>