salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_ContractStatus__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ContractStatus__c</fullName>
    <label>Estado del Contrato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En Proceso</fullName>
            </value>
            <value>
                <fullName>Firmado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>