salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_CurrentStatus__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CurrentStatus__c</fullName>
    <label>Status actual</label>
    <type>TextArea</type>
</CustomField>