salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_CurrentStatusDate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CurrentStatusDate__c</fullName>
    <label>Fecha de status actual</label>
    <type>DateTime</type>
</CustomField>