salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_CustomerOptions__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CustomerOptions__c</fullName>
    <label>Opciones de cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1. Cliente en zona Engie</fullName>
            </value>
            <value>
                <fullName>2. Cliente en zona no Engie</fullName>
            </value>
            <value>
                <fullName>3. Cliente directo a transporte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>