salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_CustomerType__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CustomerType__c</fullName>
    <label>Tipo de cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente Final</fullName>
            </value>
            <value>
                <fullName>Comercializador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>