salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_DateCompContEnd__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_DateCompContEnd__c</fullName>
    <label>Fecha fin contrato competidor</label>
    <type>Date</type>
</CustomField>