salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_Dealer__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Dealer__c</fullName>
    <label>Distribuidora</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OSFMX_CustomerOptions__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1. NGM</fullName>
            </value>
            <value>
                <fullName>2. GNP</fullName>
            </value>
            <value>
                <fullName>3. CMG</fullName>
            </value>
            <value>
                <fullName>4. DGQ</fullName>
            </value>
            <value>
                <fullName>5. DGJ</fullName>
            </value>
            <value>
                <fullName>6. TMG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>