salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_DeliveryTime__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_DeliveryTime__c</fullName>
    <label>Plazo de suministro (meses)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>