salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_EngiePlantSecondOption__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_EngiePlantSecondOption__c</fullName>
    <label>Planta ENGIE (Opción 2)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Angel 2</fullName>
            </value>
            <value>
                <fullName>Rancho Norte</fullName>
            </value>
            <value>
                <fullName>TEM</fullName>
            </value>
            <value>
                <fullName>Pánuco</fullName>
            </value>
            <value>
                <fullName>Akin</fullName>
            </value>
            <value>
                <fullName>Magdalena II (ENEL)</fullName>
            </value>
            <value>
                <fullName>Villa Ahumada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>