salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_EngieSupplier__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_EngieSupplier__c</fullName>
    <label>Proveedor Engie</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OSFMX_SolutionType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ENLIGHT</fullName>
            </value>
            <value>
                <fullName>MEM</fullName>
            </value>
            <value>
                <fullName>MX01-Country Template MX</fullName>
            </value>
            <value>
                <fullName>MX02-Consorcio Mexi Gas SA</fullName>
            </value>
            <value>
                <fullName>MX03-Cofely España SA</fullName>
            </value>
            <value>
                <fullName>MX04-ENGIE México Servicios</fullName>
            </value>
            <value>
                <fullName>MX05-Tractebel DGJ SA DE CV</fullName>
            </value>
            <value>
                <fullName>MX06-Tractebel Digaqro</fullName>
            </value>
            <value>
                <fullName>MX07-Engie Eólica Tres Mesas 3</fullName>
            </value>
            <value>
                <fullName>MX08-México Renovables</fullName>
            </value>
            <value>
                <fullName>MX09-Engie Mex Consultores SA</fullName>
            </value>
            <value>
                <fullName>MX10-Energía Mayakan, S de RL</fullName>
            </value>
            <value>
                <fullName>MX11-Engie México SA de CV</fullName>
            </value>
            <value>
                <fullName>MX12-Tractebel GNP SA DE CV</fullName>
            </value>
            <value>
                <fullName>MX13-Gasoductos del Bajío</fullName>
            </value>
            <value>
                <fullName>MX14-Cogeneración Eficiente NL</fullName>
            </value>
            <value>
                <fullName>MX15-Tractebel Energía de Mont</fullName>
            </value>
            <value>
                <fullName>MX16-Natgasmex SA de CV</fullName>
            </value>
            <value>
                <fullName>MX17-Tractebel Energia de Panu</fullName>
            </value>
            <value>
                <fullName>MX18-Servicios  Especializados</fullName>
            </value>
            <value>
                <fullName>MX19-Engie México Plataforma</fullName>
            </value>
            <value>
                <fullName>MX20-Engie México Renovables</fullName>
            </value>
            <value>
                <fullName>MX21-Energia Natural Peninsula</fullName>
            </value>
            <value>
                <fullName>MX22-ENGIE México Generación</fullName>
            </value>
            <value>
                <fullName>MX23-Engie México Operación</fullName>
            </value>
            <value>
                <fullName>MX24-Tamauligas SA de CV</fullName>
            </value>
            <value>
                <fullName>MX25-GDF Suez México Comercial</fullName>
            </value>
            <value>
                <fullName>MX26-Engie Factory México</fullName>
            </value>
            <value>
                <fullName>MX27-Solairedirect de México</fullName>
            </value>
            <value>
                <fullName>MX28-Geotérmica Cerro Pinto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>