salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_EstimatedAnnualConsumption__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_EstimatedAnnualConsumption__c</fullName>
    <formula>IF( OSFMX_Expectedannualconsumption__c  =0.0,  OSFMX_ExpectedAnnualConsumptionMWhByYear__c  ,  OSFMX_ExpConsGjByYear__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumo anual estimado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>