salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_EstimateStartUpDate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_EstimateStartUpDate__c</fullName>
    <label>Fecha estimada puesta en servicio</label>
    <type>Date</type>
</CustomField>