salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_ExpConsGjByYear__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ExpConsGjByYear__c</fullName>
    <label>Consumo anual esperado (Gj/año)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>