salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_Expectedannualconsumption__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Expectedannualconsumption__c</fullName>
    <label>Consumo anual esperado</label>
    <precision>13</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>