salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_ExpectedAnnualConsumptionMWhByYear__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ExpectedAnnualConsumptionMWhByYear__c</fullName>
    <label>Consumo anual esperado (MWh/año)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>