salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_F_PES__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_F_PES__c</fullName>
    <label>F_PES</label>
    <type>Date</type>
</CustomField>