salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_FreeInformation__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_FreeInformation__c</fullName>
    <label>Información Libre</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>