salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_IdAutoNumber__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_IdAutoNumber__c</fullName>
    <displayFormat>C-{0}</displayFormat>
    <externalId>true</externalId>
    <label>Identificador</label>
    <type>AutoNumber</type>
</CustomField>