salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_IndexReference__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_IndexReference__c</fullName>
    <description>OSFMX_IndexReference</description>
    <label>Indice de referencia</label>
    <length>20</length>
    <type>Text</type>
</CustomField>