salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_LastStageModifiedOn__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_LastStageModifiedOn__c</fullName>
    <label>Fecha de actualización de última etapa</label>
    <type>DateTime</type>
</CustomField>