salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_LostClosedStage__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_LostClosedStage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Etapa cerrada perdida</label>
    <type>Checkbox</type>
</CustomField>