salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_LostStage__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_LostStage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Deseas cerrar la oportunidad perdida?</label>
    <type>Checkbox</type>
</CustomField>