salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_NextActivity__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_NextActivity__c</fullName>
    <label>Próxima actividad</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>