salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_NextActivityDate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_NextActivityDate__c</fullName>
    <label>Fecha próxima actividad</label>
    <type>Date</type>
</CustomField>