salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_NumberAssociatedOffers__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_NumberAssociatedOffers__c</fullName>
    <label>Cantidad de ofertas asociadas</label>
    <summaryFilterItems>
        <field>Quote.OSFMX_SyncQuote__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>