salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_OpenStage__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_OpenStage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Etapa abierta</label>
    <type>Checkbox</type>
</CustomField>