salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_OpportunityType__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_OpportunityType__c</fullName>
    <defaultValue>$RecordType.DeveloperName</defaultValue>
    <label>Tipo de oportunidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OSFMX_Gas</fullName>
                <label>Gas Natural</label>
            </value>
            <value>
                <fullName>OSFMX_Electricidad</fullName>
                <label>Electricidad</label>
            </value>
            <value>
                <fullName>Otras_Soluciones</fullName>
                <label>Otras Soluciones</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>