salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_OwnerOpp__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_OwnerOpp__c</fullName>
    <formula>Owner.FirstName &amp;&quot; &quot;&amp; Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Propietario</label>
    <type>Text</type>
</CustomField>