salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_Plazo_suministro_Gas__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Plazo_suministro_Gas__c</fullName>
    <label>Plazo de suministro Gas</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>