salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_ProjectType__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ProjectType__c</fullName>
    <label>Tipo de proyecto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EPC</fullName>
            </value>
            <value>
                <fullName>PPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>