salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_RequiredPower__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_RequiredPower__c</fullName>
    <label>Potencia requerida</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>