salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_ServiceAccountId__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ServiceAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre de la cuenta de servicio</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>