salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_ServiceStartDate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ServiceStartDate__c</fullName>
    <label>Fecha inicio servicio</label>
    <type>Date</type>
</CustomField>