salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_Spread_ofertado_USD_Gj__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Spread_ofertado_USD_Gj__c</fullName>
    <label>Spread ofertado (USD/Gj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>