salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_StageInProcess__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_StageInProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Etapa en proceso</label>
    <type>Checkbox</type>
</CustomField>