salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_StageOfferPresented__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_StageOfferPresented__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Etapa oferta presentada</label>
    <type>Checkbox</type>
</CustomField>