salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_StandByStage__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_StandByStage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Etapa stand by</label>
    <type>Checkbox</type>
</CustomField>