salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_StartUp__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_StartUp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Puesta en servicio</label>
    <type>Checkbox</type>
</CustomField>