salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_StartUpDate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_StartUpDate__c</fullName>
    <formula>OSFMX_F_PES__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha puesta en servicio</label>
    <type>Date</type>
</CustomField>