salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_SyncQuote__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_SyncQuote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oferta Sincronizada</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Oportunidades (Oferta Sincronizada)</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>