salesforce_sfdx/main/default/objects/Opportunity/fields/OSFMX_WinningSupplier__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_WinningSupplier__c</fullName>
    <label>Suministrador ganador</label>
    <type>TextArea</type>
</CustomField>