salesforce_sfdx/main/default/objects/Opportunity/fields/OSFPE_fld_Clasificacion_Sentinel__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Clasificacion_Sentinel__c</fullName>
    <label>Clasificación Sentinel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>CPP</fullName>
            </value>
            <value>
                <fullName>DEF</fullName>
            </value>
            <value>
                <fullName>PER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>