salesforce_sfdx/main/default/objects/Opportunity/fields/OSFPE_fld_Corte_por_falta_de_pago_meses__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Corte_por_falta_de_pago_meses__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Corte por falta de pago (meses)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>