salesforce_sfdx/main/default/objects/Opportunity/fields/OSFPE_fld_Energia_Total_TWh__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Energia_Total_TWh__c</fullName>
    <formula>(( OSFPE_fld_Potencia_contratada_finanza_MW__c *5+ OSFPE_fld_Potencia_contratada_finanza_MW__c *19)/24)*30*24* OSFPE_fld_Factor_de_carga__c * OSFMX_DeliveryTime__c  /1000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Energía Total (TWh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>