salesforce_sfdx/main/default/objects/Opportunity/fields/OSFPE_fld_Factor_de_carga__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Factor_de_carga__c</fullName>
    <defaultValue>0.6</defaultValue>
    <label>Factor de carga</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>