salesforce_sfdx/main/default/objects/Opportunity/fields/OSFPE_fld_Factor_energia_MUSD__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Factor_energia_MUSD__c</fullName>
    <formula>(OSFPE_fld_Energia_Total_TWh__c * OSFPE_fld_Precio_de_energia__c * 1000000) / OSFMX_DeliveryTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Factor energía (MUSD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>