salesforce_sfdx/main/default/objects/Opportunity/fields/OSFPE_fld_Factor_potencia_MUSD__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Factor_potencia_MUSD__c</fullName>
    <formula>OSFPE_fld_Potencia_contratada_finanza_MW__c * OSFPE_fld_Precio_de_potencia__c * 0.7*1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Factor potencia (MUSD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>