salesforce_sfdx/main/default/objects/Opportunity/fields/OSFPE_fld_Facturacion_anual_aprox_MUSD__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Facturacion_anual_aprox_MUSD__c</fullName>
    <formula>OSFPE_fld_Facturacion_mensual_aprox_MUSD__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facturación anual aprox. (MUSD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>