salesforce_sfdx/main/default/objects/Opportunity/fields/OSFPE_fld_Facturacion_mensual_aprox_MUSD__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Facturacion_mensual_aprox_MUSD__c</fullName>
    <formula>( OSFPE_fld_Factor_potencia_MUSD__c + OSFPE_fld_Factor_energia_MUSD__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facturación mensual aprox. (MUSD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>